# fullstack-assessment-final

./: CHANGES.md  README.md  TESTING.md
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  TESTING.md  docker-compose.yml  init.sql
backend/src/: cors.rs  db.rs  lib.rs  main.rs  resolvers.rs  test_utils.rs  utils.rs
backend/tests/: test_pagination.rs  test_posts_mutations.rs  test_posts_queries.rs  test_relations.rs  test_users_queries.rs
frontend/: .gitignore  codegen.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  client.ts  index.css  main.tsx
frontend/src/__generated__/: gql.ts  graphql.ts
frontend/src/__tests__/components/: Pagination.test.tsx  SearchBar.test.tsx  Tabs.test.tsx
frontend/src/__tests__/hooks/: useDataTableFilters.test.tsx  useDebounce.test.tsx  useTableQuery.test.tsx
frontend/src/__tests__/utils/: filterBuilders.test.ts  sorting.test.ts
frontend/src/components/: DataTablePage.tsx
frontend/src/components/modals/: ConfirmModal.tsx  ModelWrapper.tsx
frontend/src/components/posts/: PostsTable.tsx  PostsTableContent.tsx  index.ts
frontend/src/components/table/: BaseTable.tsx  Pagination.tsx  SearchBar.tsx  Tabs.tsx
frontend/src/constants/: constants.ts
frontend/src/gql/: createPost.ts  deletePost.ts  getPosts.ts  getUsers.ts  updatePost.ts
frontend/src/hooks/: useDataTableFilters.ts  useDebounce.ts  useTablePagination.ts  useTableQuery.ts  useTableSorting.ts
frontend/src/types/: filters.ts
frontend/src/utils/: filterBuilders.ts  sorting.ts  validation.ts
(+10 files in other folders)
